--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     </div>
 </div>
 
+<script src="not-jquery.js"></script>
 <script src="quiz.js"></script>
 <script src="question.js"></script>
 <script src="quiz_ui.js"></script>
